tests/good/stringplus.lat
int main() {
    string i;
    i + i;
    return 0;
}
