tests/bad/field_override.lat
class A {
    int x;
}
class B extends A {
    int x;
}

int main() {
    return 0;
}
